adds index for searching tweet text; looking at coercions, but will probably back out

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,22 @@
 </head>
 <body>
 
+<%= button_tag "Refresh", id: "refresh_list" %>
 <%= yield %>
 
 </body>
 </html>
+
+<script>
+$(document).ready(function(){
+  $('#refresh_list').click(function(){
+    $.get("http://localhost:3000/quotes/lds_conf_feed", function(){
+      window.location.replace("http://localhost:3000/quotes/list")
+      })
+    .fail( function( jqXHR, textStatus, errorThrown ) {
+      alert( "error: " + jqXHR.responseText );
+    });
+  });
+});
+</script>
+
